@@ -17,6 +17,7 @@ CHANGELOG Roundcube Webmail
 - Fix XSS issue in SVG images handling (#1490625)
 - Fix missing language name in "Add to Dictionary" request in HTML mode (#1490634)
 - Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#1490643)
+- Fix bug where Archive/Junk buttons were not active after page jump with select=all mode (#1490647)
 
 RELEASE 1.2-beta
 ----------------
